<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <TextView
        android:id="@+id/textView15"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".95"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="Change the current important emails below, seperated by commas"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:layout_constraintVertical_bias="0.036"/>

    <TextView
        android:id="@+id/textView14"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".95"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text=" "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.031"
        android:layout_width="0dp"/>

    <TextView
        android:id="@+id/textView10"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".95"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Below are your current selected important email addresses."
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11"
        android:layout_width="0dp"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/textInputLayout3"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".95"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.058"
        android:layout_width="0dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/changeImpEmailsInput"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="1"
            android:layout_height="wrap_content"
            android:hint="..."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:background="@color/colorEditText"
        android:textColor="@color/pastelGreen"
        android:id="@+id/impEmailsSetButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:text="Add"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <Button
        android:background="@color/colorEditText"
        android:textColor="@color/pastelGreen"
        android:id="@+id/impEmailHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="Go Home"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/deleteButton" />

    <Button
        android:background="@color/colorEditText"
        android:textColor="@color/pastelGreen"
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="Delete"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <Button
        android:background="@color/colorEditText"
        android:textColor="@color/pastelGreen"
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:text="Clear"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/impEmailsSetButton" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="15dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
</android.support.constraint.ConstraintLayout>
